change docker image for amd64

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     tty: true
     volumes:
       - ../coursework-morry48:/coursework-morry48
-    working_dir: /coursework-morry48/sim
+    working_dir: /coursework-morry48
     environment:
       - USER=user
 
